[package]
name = "oci-runtime-config"
version = "0.1.0"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
edition = "2018"

[features]
default = ["serde", "deps-serde"]
deps-serde = ["environ_str/serde"]

[dependencies]
serde = { version = "1.0.98", features = ["derive"], optional = true }

environ_str = { package = "environ-str", path = "../environ-str" }

[dev-dependencies]
serde_json = "1.0.40"